Added function to measure distance between robot and reward + custom msg to publish the function results

--- a/catkin_ws/src/enki_ros_pck/CMakeLists.txt
+++ b/catkin_ws/src/enki_ros_pck/CMakeLists.txt
@@ -7,15 +7,32 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   roslib
+  message_generation
+  
 )
 
+add_message_files(
+  FILES
+  Sight.msg
+)
+
+generate_messages(
+      DEPENDENCIES
+      std_msgs
+        roscpp
+) 
+
+
 catkin_package(
+  CATKIN_DEPENDS
+  roscpp
+  std_msgs
+  message_runtime
 )
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
-
 
 set(enki_LIBRARY /usr/local/lib/libenki.a)
 
@@ -26,9 +43,12 @@ set(SOURCES run.cpp Racer.cpp bandpass.cpp)
 
 include_directories(/usr/local/include/enki)
 
+
 add_executable(robot ${SOURCES})
 target_link_libraries(robot ${catkin_LIBRARIES} ${enki_LIBRARY} Qt5::OpenGL Qt5::Widgets GL)
+add_dependencies(robot enki_ros_pck_gencpp)
 
 #catkin_install_python(PROGRAMS py_plot/topic_plot.py
 #  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 #)
+
