Got headers working for reversal learning functions, generally tidied up run.cpp a bit

--- a/catkin_ws/src/enki_ros_pck/CMakeLists.txt
+++ b/catkin_ws/src/enki_ros_pck/CMakeLists.txt
@@ -39,7 +39,7 @@ set(enki_LIBRARY /usr/local/lib/libenki.a)
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt5 COMPONENTS OpenGL REQUIRED)
 
-set(SOURCES run.cpp Racer.cpp bandpass.cpp)
+set(SOURCES run.cpp Racer.cpp bandpass.cpp ReversalSignals.cpp)
 
 include_directories(/usr/local/include/enki)
 
