--- a/catkin_ws/src/enki_ros_pck/CMakeLists.txt
+++ b/catkin_ws/src/enki_ros_pck/CMakeLists.txt
@@ -32,6 +32,7 @@ catkin_package(
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
+  Brain
 )
 
 set(enki_LIBRARY /usr/local/lib/libenki.a)
@@ -39,7 +40,7 @@ set(enki_LIBRARY /usr/local/lib/libenki.a)
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt5 COMPONENTS OpenGL REQUIRED)
 
-set(SOURCES run.cpp Racer.cpp bandpass.cpp ReversalSignals.cpp)
+set(SOURCES run.cpp Racer.cpp bandpass.cpp ReversalSignals.cpp Brain/limbic-system-model.cpp Brain/filter.cpp Brain/ctxneuron.cpp)
 
 include_directories(/usr/local/include/enki)
 
